# Self-Documenting-PhD-Notebook

./: .pre-commit-config.yaml  AUTONOMOUS_DEPLOYMENT_GUIDE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_GENERATION_4_COMPLETE.md  AUTONOMOUS_SDLC_SUMMARY.md  AUTONOMOUS_VALIDATION_REPORT.md  CICD_SETUP.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  GENERATION_4_EVOLUTIONARY_ENHANCEMENT_COMPLETE.md  GENERATION_5_QUANTUM_DEPLOYMENT_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MANUAL_SETUP_REQUIRED.md  Makefile  PIPELINE_GUARD_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUALITY_GATES_VALIDATION.md  README.md  SECURITY_REPORT.md  amrf_demo_report.json  autonomous_test_results.json  deployment.prod.yaml  docker-compose.prod.yml  minimal_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  run_manual_tests.py  run_tests.py  security_config.json  setup.py  test_autonomous_direct.py  (+2 more)
benchmarks/: benchmark_results.json  publication_benchmark_results.json  publication_benchmarks.py  research_algorithm_benchmarks.py
final_validation_vault/: Welcome.md
production_test_vault/: Welcome.md
scripts/: demo_research_framework.py  performance_benchmark.py  quick_security_scan.py  research_benchmark.py  security_scan.py
src/phd_notebook/: __init__.py
src/phd_notebook/agents/: __init__.py  base.py  experiment_agent.py  (+4 more)
test/: Welcome.md
test_automated_vault/: Welcome.md
test_automated_vault/.obsidian/: workspace.json
test_vault/Test-PhD/: Welcome.md
tests/: __init__.py  test_global_features.py  test_pipeline_guard.py  test_quantum_systems.py
tests/integration/: test_advanced_research_system.py  test_notebook_workflow.py  test_research_platform_integration.py  test_robust_features.py
tests/performance/: test_enhanced_monitoring.py
tests/security/: test_security_framework.py
tests/unit/: test_agents.py  test_ai_clients.py  test_core_functionality.py  test_global_features.py  test_note.py  test_performance.py  test_quantum_systems.py  test_security.py  test_validation.py  test_workflows.py
(+139 files in other folders)
